WIP api docs - matrix

--- a/APIFolder/apicss/apidocs.css
+++ b/APIFolder/apicss/apidocs.css
@@ -1,3 +1,37 @@
+.tocMatrix {
+	font-size: 75%;
+}
+
+.matrixHeading { 
+	border-collapse:collapse;
+	margin-right:10px;
+	margin-left:10px;
+	border:3px solid blue;
+}
+
+.matrixHeading td, 
+{ 
+	border:1px solid #98bf21; 
+	padding:3px 7px 2px 7px; 
+} 
+.matrixHeading tr.alt td  
+{ 
+	color:#000; 
+	background-color:#EAF2D3; 
+}
+
+
+.matrixHeadingBG {
+	background-color: blue;
+}
+
+.matrixHeadingVerbs {
+	color: white;
+	font-weight: bold;
+	font-size: 125%
+}
+
+
 
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,tdjpw{margin:0;padding:0;}tablejpw{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
 
