--- a/JavaScriptApps/resources/IndividualLendingCode-1.0.css
+++ b/JavaScriptApps/resources/IndividualLendingCode-1.0.css
@@ -4,6 +4,22 @@
     	margin-left: 20px;
 }
 
+#appTitle {
+    	font-size: 20px;
+	font-weight: bold;
+    	margin-bottom: 40px;
+}
+
+#theLogonForm {
+    	margin-top: 20px;
+    	margin-left: 250px;
+}
+
+#logonTable td {
+    	font-size: 14px;
+}
+
+
 h2 {
     	font-size: 16px;
     	margin-bottom: 10px;
