update api-docs in prep for demo.

--- a/api-docs/apidocs.css
+++ b/api-docs/apidocs.css
@@ -5,6 +5,13 @@
 	color: blue;
 }
 
+.apiClickNotPretty {
+    text-decoration: underline;
+    cursor: hand; 
+    cursor: pointer;
+    color: blue;
+}
+
 #jpw {
 	text-decoration: underline;
 	cursor: hand; 
